--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "mongodb": "^3.0.6",
     "mongoose": "^5.0.14",
     "morgan": "~1.9.0",
     "passport": "^0.4.0"
