added biography faker api

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dotenv": "^4.0.0",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "faker": "^4.1.0",
     "http-errors": "~1.6.2",
+    "json-schema-faker": "^0.5.0-rc15",
     "mongodb": "^3.0.6",
     "mongoose": "^5.0.14",
     "morgan": "~1.9.0",
