--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^3.0.6",
     "mongoose": "^5.0.14",
     "morgan": "~1.9.0",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "promise": "^8.0.1"
   }
 }
