--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "express-ejs-layouts": "^2.4.0",
+    "express-http-proxy": "^1.1.0",
     "express-reverse": "^0.3.2",
     "faker": "^4.1.0",
     "http-errors": "~1.6.2",
