--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.0.14",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
-    "promise": "^8.0.1"
+    "promise": "^8.0.1",
+    "youtube-random-video": "^1.0.5"
   }
 }
